@startuml

title __WAREHOUSES's Class Diagram__\n

  namespace com.vale.warehouses {
    namespace ui.warehouses {
      class com.vale.warehouses.ui.warehouses.AddEditWarehouseActivity {
          {static} + WAREHOUSE_ID : String
          - categories : ArrayList<Category>
          - editSpinnerCategory : Spinner
          - editSpinnerType : Spinner
          - editTextAddress : TextInputLayout
          - editTextHeight : TextInputLayout
          - editTextLength : TextInputLayout
          - editTextPricePerMonth : TextInputLayout
          - editTextWidth : TextInputLayout
          - format : DateTimeFormatter
          - listViewTenantHistory : ListView
          - textViewTenantHistory : TextView
          - warehouseTypes : ArrayList<WarehouseType>
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          # onCreate()
          - buildViewModels()
          - getTenantHistory()
          - saveWarehouse()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.warehouses {
      class com.vale.warehouses.ui.warehouses.SaleAgentMultiSelectionSpinner {
          ~ adapter : ArrayAdapter<String>
          ~ saleAgents : List<SaleAgent>
          ~ selection : boolean[]
          - selectedSaleAgents : MutableLiveData<Set<SaleAgent>>
          + SaleAgentMultiSelectionSpinner()
          + SaleAgentMultiSelectionSpinner()
          + getSelectedItems()
          + getSelection()
          + onClick()
          + performClick()
          + setAdapter()
          + setSaleAgents()
          + setSelection()
          - buildSelectedItemString()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.warehouses {
      class com.vale.warehouses.ui.warehouses.WarehouseAdapter {
          {static} - DIFF_CALLBACK : ItemCallback<Warehouse>
          + WarehouseAdapter()
          + getWarehouseAt()
          + onBindViewHolder()
          + onCreateViewHolder()
          + setOnItemClickListener()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.warehouses {
      interface com.vale.warehouses.ui.warehouses.WarehouseAdapter.OnItemClickListener {
          {abstract} + onItemClick()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.warehouses {
      class com.vale.warehouses.ui.warehouses.WarehouseAdapter.WarehouseHolder {
          - textViewAdditionalData : TextView
          - textViewAddress : TextView
          - textViewPricePerMonth : TextView
          + WarehouseHolder()
      }
    }
  }
  

  namespace com.vale.warehouses {
    namespace ui.warehouses {
      class com.vale.warehouses.ui.warehouses.WarehouseListActivity {
          {static} + ADD_REQUEST : int
          {static} + EDIT_REQUEST : int
          + onCreateOptionsMenu()
          + onOptionsItemSelected()
          # onActivityResult()
          # onCreate()
          - getAllWarehouses()
          - logoutNow()
      }
    }
  }
  

  com.vale.warehouses.ui.warehouses.AddEditWarehouseActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.vale.warehouses.ui.warehouses.AddEditWarehouseActivity o-- com.vale.warehouses.service.view_model.LeasingContractViewModel : leasingContractViewModel
  com.vale.warehouses.ui.warehouses.AddEditWarehouseActivity o-- com.vale.warehouses.ui.warehouses.SaleAgentMultiSelectionSpinner : saleAgentSpinner
  com.vale.warehouses.ui.warehouses.AddEditWarehouseActivity o-- com.vale.warehouses.service.view_model.SaleAgentViewModel : saleAgentViewModel
  com.vale.warehouses.ui.warehouses.AddEditWarehouseActivity o-- com.vale.warehouses.service.model.Warehouse : warehouse
  com.vale.warehouses.ui.warehouses.AddEditWarehouseActivity o-- com.vale.warehouses.service.view_model.WarehouseViewModel : warehouseViewModel
  com.vale.warehouses.ui.warehouses.SaleAgentMultiSelectionSpinner .up.|> android.content.DialogInterface.OnMultiChoiceClickListener
  com.vale.warehouses.ui.warehouses.SaleAgentMultiSelectionSpinner -up-|> androidx.appcompat.widget.AppCompatSpinner
  com.vale.warehouses.ui.warehouses.WarehouseAdapter -up-|> androidx.recyclerview.widget.ListAdapter
  com.vale.warehouses.ui.warehouses.WarehouseAdapter o-- com.vale.warehouses.ui.warehouses.WarehouseAdapter.OnItemClickListener : listener
  com.vale.warehouses.ui.warehouses.WarehouseAdapter +-down- com.vale.warehouses.ui.warehouses.WarehouseAdapter.OnItemClickListener
  com.vale.warehouses.ui.warehouses.WarehouseAdapter +-down- com.vale.warehouses.ui.warehouses.WarehouseAdapter.WarehouseHolder
  com.vale.warehouses.ui.warehouses.WarehouseAdapter.WarehouseHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.vale.warehouses.ui.warehouses.WarehouseListActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.vale.warehouses.ui.warehouses.WarehouseListActivity o-- com.vale.warehouses.ui.warehouses.WarehouseAdapter : warehouseAdapter
  com.vale.warehouses.ui.warehouses.WarehouseListActivity o-- com.vale.warehouses.service.view_model.WarehouseViewModel : warehouseViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
